--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="searchForm" class="container">
         <div class="row">
             <div class="input-field col s12 m4">
-                <input type="text" id="movieTitle" placeholder="Movie Title">
+                <input type="text" id="movieTitle" placeholder="Movie Title"/>
             </div>
         </div>
         <div class="row">
@@ -32,11 +32,12 @@
     </div>
 
     <div class="container" id="movieDetails">
-        
+
     </div>
-    
-    <script src="app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="utilities.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
